--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <link href="img/2.ico" rel="icon">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark animate__animated animate animate__backInLeft">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a id="menu" class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -96,6 +97,12 @@
               </div>
             </div>
           </div>
+    </section>
+
+    <section>
+      <h4 id="titulo" class="2pac">LA BUENA MI PAPACHO</h4>
+
+      <img src="img/2.ico" alt="foto" id="foto12">
     </section>
 
     <footer>
